Home page heading colors contrast fix

--- a/css/index.css
+++ b/css/index.css
@@ -180,23 +180,23 @@ q:before {
 /* Rest of the styling */
 
 body {
-  background: #ffffff;
+  background-color: rgba(255, 255, 255, 1.0);
 }
 
 a {
-  color: #f40009;
+  color: rgba(244, 0, 9, 1.0);
   font-weight: bold;
   text-decoration: none;
 }
 
 a:hover {
-  color: #990000;
+  color: rgba(153, 0, 0, 1.0);
   transition: 1.2s ease-out;
 }
 
 span.pre {
-  background-color: #639;
-  color: #fff;
+  background-color: rgba(102, 51, 153, 1.0);
+  color: rgba(255, 255, 255, 1.0);
   font-family: 'Overpass Mono', monospace;
   font-size: .75em;
   padding: 0.5rem 1rem;
@@ -213,7 +213,7 @@ span.pre:hover {
   /* Safari */
   position: sticky;
   top: 0;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 1.0);
 }
 
 /* BASIC SETUP */
@@ -283,16 +283,19 @@ a.tag {
   transition: color 0.3s ease-out;
 }
 
-.nav-item a:hover,
-a.tag:hover {
-  color: #000;
+.nav-item a:hover {
+  color: rgba(244, 0, 9, 1.0);
 }
 
 a.tag {
-  background-color: #1da1f2;
+  background-color: rgba(29, 161, 242, 1.0);
   border-radius: 4px;
-  color: white;
+  color: rgba(255, 255, 255, 1.0);
   padding: 0.25rem 1rem;
+}
+
+a.tag:hover {
+  color: rgba(0, 0, 0, 1.0);
 }
 
 /* SEARCH FUNCTION */
@@ -532,7 +535,6 @@ label {
 .promoted-articles__container {
   margin-right: auto;
   margin-left: auto;
-  background-color: #ffffff;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   max-width: 1440px;
@@ -557,16 +559,15 @@ label {
 .promoted-articles__article {
   height: 100%;
   width: auto;
-  background-color: rgba(0, 0, 0, 1.0);
   display: block;
-  opacity: 0.75;
+  opacity: 1.0;
   overflow: hidden;
   position: relative;
 }
 
 .promoted-articles__article:hover {
-  transition: 1.2s ease-in-out;
-  opacity: 1;
+  transition: .25s ease-in-out;
+  opacity: 0.7;
 }
 
 @media (max-width: 900px) {
@@ -607,14 +608,13 @@ label {
   min-width: 100%;
   object-fit: cover;
   object-position: 50% 50%;
-  opacity: 0.8;
 }
 
 .promoted-articles__content {
+  bottom: 0rem;
+  left: 3rem;
   position: absolute;
-  right: 5rem;
-  bottom: 0.5rem;
-  left: 5rem;
+  width: 100%;
 }
 
 @media (max-width: 600px) {
@@ -627,18 +627,13 @@ label {
 }
 
 .promoted-articles__title {
-  color: rgba(255, 136, 0, 1.0);
+  color: rgba(255, 255, 255, 1.0);
   font-family: "Futura", Arial, Helvetica, sans-serif;
   font-size: 3rem;
   font-weight: 700;
   line-height: 1.1;
   padding-bottom: 2rem;
   text-transform: uppercase;
-}
-
-.promoted-articles__article:focus .promoted-articles__title,
-.promoted-articles__article:hover .promoted-articles__title {
-  color: rgba(255, 255, 255, 1.0);
 }
 
 .article-list {
@@ -834,7 +829,7 @@ p.note {
 }
 
 h1 {
-  color: #000;
+  color: rgba(0, 0, 0, 1.0);
   font-family: "Futura", "Trebuchet MS", Arial, Helvetica, sans-serif;
   font-size: 1.8em;
   line-height: 1.8;
@@ -843,7 +838,7 @@ h1 {
 }
 
 h1:hover {
-  color: #222;
+  color: rgba(34, 34, 34, 0.5);
 }
 
 h2 {
